# python-project-52

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: main.yml
fixtures/: labels.json  statuses.json  tasks.json  test_label.json  test_status.json  test_task.json  test_user.json  user.yaml  users.json
locale/nl/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixin.py  right_user.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_relation.py  0003_task_executor_alter_task_author.py  0004_delete_relation.py  0005_relation_task_label.py  0006_rename_label_task_labels.py  0007_alter_task_labels.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: create.html  delete.html  labels.html  update.html
task_manager/templates/statuses/: create.html  delete.html  statuses.html  update.html
task_manager/templates/task_manager/: index.html  login.html  logout.html
task_manager/tg_bot/: urls.py  views.py
task_manager/users/: admin.py  forms.py  tests.py  urls.py  views.py
(+11 files in other folders)
