[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Софья Григорович <sonyashkin@icloud.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.0.0"
django = "^4.2.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
