[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task management system"
authors = ["Софья Григорович <sonyashkin@icloud.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]
classifiers = [
"Programming Language :: Python :: 3.10",
"Framework :: Django :: 4.2.2",
"Environment :: Web Environment"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"
railway = "^0.0.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
